# Goldwasser-Micali_Multithread

./: CMakeLists.txt  Goldwasser_Micali_Multithread.cpp  Goldwasser_Micali_Multithread.h  tekst_testowy_lorem.txt  test.cpp
